@startuml logger-decorator-context-class-diagram

title libcpplog logger::decorator::context class diagram

class Context {
    == public ==
    + Context(Message*)
    ..
    + getString() : string    
    == private ==
    - location : source_location
    - {abstract} getFunctionName() : string
    - buildString() : string
}

class Long {
    == public ==
    + Long(Message*)
    == private ==
    - functionName : function_name::LongStore
    - getFunctionName() : string
}

class Short {
    == public ==
    + Short(Message*)
    == private ==
    - functionName : function_name::ShortStore
    - getFunctionName() : string
}

package function_name {
    class "ShortStore" as fn_ShortStore
    hide fn_ShortStore methods
    hide fn_ShortStore attributes  
    class "LongStore" as fn_LongStore
    hide fn_LongStore methods
    hide fn_LongStore attributes 
}

Context <|-- Long
Context <|-- Short

Long o-- "1" fn_LongStore
Short o-- "1" fn_ShortStore

@enduml